Correção de alguns bugs e ajustes na pag de projetos.

--- a/projetos.css
+++ b/projetos.css
@@ -173,7 +173,6 @@ body {
     stroke: var(--cor-texto-secundario);
 }
 
-
 .language-dropdown {
     display: none;
     position: absolute;
@@ -185,8 +184,9 @@ body {
     overflow: hidden;
     min-width: 130px;
     z-index: 1001;
-    backdrop-filter: blur(5px);
+    /* Correção: Prefixo vem ANTES da propriedade padrão */
     -webkit-backdrop-filter: blur(5px);
+    backdrop-filter: blur(5px);
 }
 
 .language-dropdown.open {
@@ -253,4 +253,8 @@ body {
         width: 30px;
         height: 30px;
     }
+}
+
+.hidden {
+    display: none !important;
 }
